# rnn_translate

./: .env.simple  .gitignore  README.md  pyproject.toml
rnn_translate/: default_settings.py
rnn_translate/cmd/: web.py
rnn_translate/models/: __init__.py  rnn_model.py  users.py
rnn_translate/utils/data/: en_sp.model  en_sp.vocab  th_sp.model  th_sp.vocab
rnn_translate/web/: __init__.py  acl.py
rnn_translate/web/forms/: accounts.py
rnn_translate/web/templates/base/: base-layout.html  default-page.html
rnn_translate/web/templates/site/: index.html
rnn_translate/web/views/: sites.py
scripts/: init-admin.py  run-web
