[tool.poetry]
name = "rnn_translate"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
Flask = "^3.1.0"
Flask-Login = "^0.6.3"
mongoengine = "^0.29.1"
Werkzeug = "^3.1.3"
flask-me = "^1.0.2"
Flask-Caching = "^2.3.0"
Flask-Bcrypt = "^1.0.1"
Flask-WTF = "^1.2.2"
flake8 = "^3.9.2"

[tool.poetry.scripts]
rnn_translate-web = "rnn_translate.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
